Change English to Tamil

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <td>
           <table cellspacing="10">
             <tr>
-              <td>English</td>
+              <td>Tamil</td>
               <td>★★★★☆</td>
             </tr>
             <tr>
